--- a/web/index.html
+++ b/web/index.html
@@ -26,7 +26,9 @@
         margin: 0px;
         padding: 0px;
         /* Allows content to fill the viewport and go beyond the bottom */
-        min-height: 100%;
+        height: 10%;
+        background:red;
+        overflow: hidden;
       }
       #root {
         flex-shrink: 0;
